# hou-aibridge

./: .envrc  .gitignore  .markdownlint.json  .prompt.md  .vscodeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  PYPROJECT-TOML.md  README.md  RELEASE.md  SECURITY.md  SUBPROJECTS.md  ai-bridge.code-workspace  build-wheels.sh  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  tsconfig.json  vsc-extension-quickstart.md  zabob.code-workspace
.cspell/: custom-dictionary-workspace.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/codeql/: codeql-config.yml
.github/workflows/: build-extension.yml  build.yml  codeql.yml  integration-tests.yml
docker/: Dockerfile.houdini  build-multiarch.sh  docker-compose.override.yml  docker-compose.yml  setup-dockerhub.sh  sidefx_credentials.example.env
docker/houdini-20.5/: Dockerfile  houdini_versions
docker/mcp-git-lfs/: Dockerfile  README.md  build.sh
docker/zabob-mcp/: Dockerfile  README.md  docker-compose.yml
docs/: README.md
docs/.cspell/: workspace.txt
docs/images/psd/: zabob-holodeck.psd
docs/user/: README.md  claude-docker-setup.md
houdini/: README.md
houdini/h20.5/: README.md  pyproject.toml  pythonx
houdini/h20.5/src/aibridge/h20_5/: staric.py
houdini/h20.5/src/h20_5/: __init__.py
houdini/h20.5/src/zabob/h20_5/: __init__.py  static.py
houdini/h21.0/: README.md
houdini/hdas/: README.md
houdini/zcommon/: README.md  pyproject.toml  tmp.db
houdini/zcommon/src/zabob/common/: __init__.py  analysis_db.py  analysis_table.py  analysis_types.py  analyze_modules.py  analyze_node_types.py  click_types.py  common_paths.py  common_types.py  common_utils.py  data_retrieval.py  detect_env.py  find_houdini.py  hython.py  infinite_mock.py  infinite_proxy.py  network_analyzer.py  overload_collector.py  pdg_analyzer.py  subproc.py  timer.py
houdini/zcommon/src/zabob/common/_find/: _linux.py  _macos.py  _windows.py  types.py
images/psd/: zabob-banner.psd
mcp-server/: DEMOS_README.md  DEMO_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  README.md  WEB_INTEGRATION_README.md  add.htm  demo_zabob.py  enhanced_demo_vision.py  enhanced_integration_prototype.py  interactive_demo.py  live_web_search_demo.py  pyproject.toml  quick_demo.py  quick_web_demo.py  simple_test.py  static-data.sqlite3-query  test_database.py  test_integration.py  test_new_database.py  test_pdg_registry.py  test_schema_fix.py  test_union_fix.py  test_web_search.py  user_scenarios.py  validate.py  web_integration_plan.py  web_integration_showcase.py
mcp-server/src/hou_aibridge/: find_houdini.py
mcp-server/src/hou_aibridge/_find/: _linux.py  _macos.py  _windows.py  types.py
mcp-server/src/zabob/mcp/: database.py  server.py
mcp-server/src/zsbob/mcp/: instructions.md  server.py
mcp-server/src/zsbob/mcp/responses/: general-instructions_20.5.md  list_node_types.md  version-instruction-20.5.md
mcp-server/tests/: test_analysis_tables.py
mcp-server/typings/aiopath/: handle.pyi
scripts/: devtool  houdini_versions  package.json  pyproject.toml
scripts/devtool_modules/: __init__.py  __main__.py  houdini_versions  main.py  node.py  paths.py  server.py  setup.py  subproc.py  update.py  utils.py
scripts/src/devtools/: __init__.py  __main__.py  houdini.py  houdini_versions.py  hython.py  main.py  node.py  paths.py  server.py  setup.py  subproc.py  update.py  utils.py
src/: extension.ts
src/hou_aibridge/: __init__.py  server.py
tools/: houdini_versions.py
typings/aiopath/: __init__.pyi  metadata.pyi  path.pyi  types.pyi  wrap.pyi
vscode-chat/: .envrc  esbuild.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
zabob-chat/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
zabob-chat/src/: extension.ts
zabob-chat/test/: runTest.ts
zabob-modules/: README.md  docker-build  package.json  pnpm-lock.yaml  pyproject.toml
zabob-modules/src/zabob/: __init__.py  __main__.py  find_houdini.py  houdini.py  houdini_versions.py  hython.py  main.py  node.py  paths.py  server.py  setup.py  subproc.py  update.py  utils.py
zabob-modules/src/zabob/_find/: _linux.py  _macos.py  _windows.py  types.py
zabob-modules/src/zabob/core/: __init__.py  __main__.py  core_types.py  detect_env.py  diagnostics.py  find_houdini.py  houdini.py  houdini_versions.py  hython.py  main.py  node.py  paths.py  server.py  setup.py  subproc.py  update.py  utils.py
zabob-modules/src/zabob/data/: hython  sitecustomize.py
