[project]
name = "hou-aibridge"
version = "0.1.0"
description = "Bridge between Houdini and AI"
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofile>=3.9.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aiopath>=0.7.7",
    "anyio>=4.9.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.1",
    "pedantic>=2.1.9",
    "sqlite-vec>=0.1.7a2",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools.package-data]

hou_aibridge = [
    "responses/*.json",
    "responses/*.md",
    "zabob.jpg",
]
