[project]
name = "zabob-server"
version = "0.1.0"
description = "Bridge between Houdini and AI"
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "anyio>=4.9.0",
    "click>=8.2.1",
    "fastapi>=0.115.12",
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.1",
    "pedantic>=2.1.9",
    "zabob>=0.1.0",
    "zabob-common>=0.1.0",
    "semver>=3.0.4",
    "sqlite-vec>=0.1.7a2",
    "uvicorn>=0.34.2",
    "aiopath>=0.7.7",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# Using setuptools instead of hatchling for now,
# due to this issue: https://github.com/pypa/hatch/issues/1977
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # This tells setuptools that src is the package root


# This is important for editable installs with namespace packages
[tool.setuptools.packages.find]
where = ["src"]
include = ["zabob*"]
namespaces = true


[tool.uv.sources]
zabob-common = { path = "../houdini/zcommon", editable = true }
zabob = { path = "../zabob-modules", editable = true }

[dependency-groups]
dev = [
    #"click>=8.0.0,<8.2.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "semver>=3.0.4",
    "tomlkit>=0.13.2",
]
