[project]
name = "scripts"
version = "0.1.0"
description = "Dev scripts for Bridge between Houdini and AI"
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiopath>=0.7.7",
    "anyio>=4.9.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.1",
    "pedantic>=2.1.9",
    "python-dotenv>=1.1.0",
    "sqlite-vec>=0.1.7a2",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
include = [ "*" ]

[tool.setuptools.package-data]
include=[ '*' ]

[dependency-groups]
dev = [
    "click>=8.0.0,<8.2.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "semver>=3.0.4",
    "tomlkit>=0.13.2",
]
