[project]
name = "zabob"
version = "0.1.0"
description = "Dev scripts for Bridge between Houdini and AI"
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiopath>=0.7.7",
    "anyio>=4.9.0",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "fastmcp>=2.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "pedantic>=2.1.9",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "sqlite-vec>=0.1.7a2",
    "uvicorn>=0.34.2",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["zabob", "zabob.data"]

[tool.setuptools.package-data]
"zabob.data" = ["*"]  # Include all files in the data directory

[tool.hatch.build]
packages = [ "zabob" ]
package-dir = { "" = "src" }

[tool.hatch.build.targets.wheel]
#packages = [ "src/zabob/**"]
only-include = [ "src/zabob" ]

# This is how you include data files with hatchling
[tool.hatch.build.targets.wheel.sources]
"src/zabob" = {target = "zabob"}

# Make sure non-Python files are included
[tool.hatch.build.targets.wheel.include]
"src/zabob/data" = ["**/*"]

[tool.hatch.build.targets.editable]
dev-mode-exact = true
#
#[tool.setuptools.package-data]
#include=[ 'src/zabob/**', "README.md", "../LICENSE.md",  ]

[tool.uv.sources]
zabob-modules = { workspace = true }

[dependency-groups]
dev = [
    "click>=8.0.0,<8.2.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "semver>=3.0.4",
    "tomlkit>=0.13.2",
]
