[project]
name = "zabob-h20-5"
version = "0.1.0"
description = "Zabob connector for Houdini 20.5"
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "hou>=0.1.0",
    "semver>=3.0.4",
    "zabob-common",
]

[tool.zabob]
use-hython = true

[project.scripts]
h20-5 = "zabob.h20_5:main"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["zabob.h20_5"]


[tool.uv.sources]
zabob-h20-5 = { workspace = true }
zabob-common = { path = "../zcommon", editable = true }



[tool.hatch.build.targets.wheel]
include = [ "src/*" ]
