[project]
name = "zabob-common"
version = "0.1.0"
description = "Common utilities for Zabob Houdini integration"
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "hou>=0.1.0",

]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # This tells setuptools that src is the package root
#packages = ["zabob.common"]  # Be explicit about what pack

# This is important for editable installs with namespace packages
[tool.setuptools.packages.find]
where = ["src"]
include = ["zabob*"]
namespaces = true

[project.scripts]


[tool.hatch.build]
packages = [ "zabob" ]
package-dir = { "" = "src" }


# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [ "src/zabob" ]

# This is how you include data files with hatchling
[tool.hatch.build.targets.wheel.sources]
"src/zabob" = "zabob"

# Make sure non-Python files are included
[tool.hatch.build.targets.wheel.include]
"src/zabob/data" = ["**/*"]

[tool.hatch.build.targets.editable]
dev-mode-exact = true
